@@ -15,6 +15,9 @@
 	- Fixed incorrect display of string data in DCI history
 	- Added "copy to clipboard" action in MAC address search reults
 	- Added "copy to clipboard" action in interface tab
+- Added commands "get" and "set" to nxdbmgr to manager server configuration
+  variables
+- New NXSL function: RenameObject
 
 
 *
